--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 .web-nav {
     background: rgb(116,9,19);
     background: linear-gradient(90deg, rgba(116,9,19,1) 0%, rgba(203,113,113,1) 49%, rgba(116,9,19,1) 100%);
-    height: 15vh;
+    height: 100px;
 }
 
 .quotes {
